variables.Variables.scala.error
Erreur de compilation :
Variables:6: error: not found: value prendBisuit
prendBisuit()
^Variables:11: error: not found: value poseBisuit
poseBisuit()
^