variables.Variables.scala.code
var nbPas: Int=0
while (estSurBiscuit==false){
  avance()
  nbPas=nbPas+1
}
prendBisuit()
var dejafait: Int=nbPas
while (dejafait != nbPas){
  recule()
}
poseBisuit()
